CM-2.9: Обновить документацию FeedService
