# docs/swagger.json
@@ -13,7 +13,7 @@
     "paths": {
         "/api/feed": {
             "get": {
-                "description": "Get users's new feed part by last post id and batch size.",
+                "description": "Get user's new feed part by last post id and batch size.",
                 "produces": [
                     "application/json"
                 ],
@@ -40,20 +40,32 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entities.Post"
-                            }
+                            "$ref": "#/definitions/handlers.PostArray"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.ErrorResponse"
+                        }
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.ErrorResponse"
+                        }
                     },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -760,6 +772,17 @@
                 },
                 "text": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.PostArray": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Post"
+                    }
                 }
             }
         },
