# internal/delivery/handlers/feed.go
@@ -21,17 +21,19 @@ func NewFeedHandler(feedService usecase.Feed) *FeedHandler {
 
 // GetFeed godoc
 //
-//	@Summary		Get feed part
-//	@Description	Get users's new feed part by last post id and batch size.
-//	@Tags			Feed
-//	@Produce		json
-//	@Param			batch_size		query	int		true	"Posts amount"
-//	@Param			last_post_date	query	string	false	"Date and time of last post given. If not specified the newest posts will be sent"
-//	@Success		200				{array}	entities.Post
-//	@Failure		400
-//	@Failure		401
-//	@Failure		500
-//	@Router			/api/feed [get]
+// @Summary		Get feed part
+// @Description	Get user's new feed part by last post id and batch size.
+// @Tags			Feed
+// @Produce		json
+// @Param			batch_size		query	int		true	"Posts amount"
+// @Param			last_post_date	query	string	false	"Date and time of last post given. If not specified the newest posts will be sent"
+// @Success		200				{object}	PostArray
+// @Failure		400 {object} middleware.ErrorResponse
+// @Failure     401 {object} middleware.ErrorResponse
+// @Failure     404 {object} middleware.ErrorResponse
+// @Failure		500 {object} middleware.ErrorResponse
+//
+//	@Router		/api/feed [get]
 func (handler *FeedHandler) GetFeed(ctx *gin.Context) {
 	email, exists := ctx.Get("email")
 	if !exists {
@@ -65,4 +67,8 @@ func (handler *FeedHandler) GetFeed(ctx *gin.Context) {
 			"posts": posts,
 		},
 	})
+}
+
+type PostArray struct {
+	Body []entities.Post `json:"body"`
 }
